# FIX-Message

./: .gitignore  CMakeLists.txt  README.md
include/: Exception.hpp  Expected.hpp  Expected.inl  Header.hpp  Header.inl  List.hpp  List.inl  Message.hpp  Message.inl  RejectError.hpp  Tag.hpp  TagValueConvertor.hpp  TagValueConvertor.inl
include/FIX-Message/: Header.hpp  Header.inl  List.hpp  List.inl  Message.hpp  Message.inl  RejectError.hpp  Tag.hpp
include/FIX-Message/meta/: concept.hpp  find_tag.hpp  is_optional.hpp  is_required_tag.hpp  is_tag.hpp  is_tag_tuple.hpp  limit.hpp  using.hpp
include/Imp/: Tag.hpp
include/meta/: concept.hpp  find_tag.hpp  is_required_tag.hpp  is_tag.hpp  using.hpp
src/: Exception.cpp  main.cpp
tests/Header/: NonPositional.cpp  Positional.cpp  Serialization.cpp
tests/List/: Insert.cpp  MissingRequired.cpp  NoTagData.cpp  Serialization.cpp
tests/Message/: Insert.cpp
tests/Parsing/: Bool.cpp  Char.cpp  Int.cpp  Optional.cpp  String.cpp
tests/include/: Tag.hpp  TagConvertor.hpp
tests/src/: TagConvertor.cpp
tests/src/Header/: NonPositional.cpp  Positional.cpp  Serialization.cpp
tests/src/List/: Insert.cpp  MissingRequired.cpp  NoTagData.cpp  Serialization.cpp
tests/src/Message/: Insert.cpp  Serialization.cpp  UnknowTag.cpp
tests/src/Parsing/: Float.cpp
